chore: openjdk 17 latest ea tweaks